# bitpacker

./: .clang-format  .clang-tidy  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bitpacker.h  tester.cpp  tester.vcxproj  tester.vcxproj.filters
.github/workflows/: main.yml
buildlinux/: conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json
buildlinux/test/: tests_include-6618e97.cmake  tests_tests-6618e97.cmake  unittests.Bits_Required_Util.xml  unittests.Random_Test_Bit.xml  unittests.Sanity_Check_Buffer_Read.xml  unittests.Sanity_Check_Buffer_Write.xml  unittests.Stream_Read_And_Write_Random_Structure.xml
cmake/: cache.cmake  compilerwarnings.cmake  conan.cmake  preventinsourcebuilds.cmake  sanitizers.cmake  standardprojectsettings.cmake  staticanalyzers.cmake
include/: bitpacker.h
test/: CMakeLists.txt  catchmain.cpp  tests.cpp
tester.dir/Debug/: tester.exe.recipe  tester.ilk
tester.dir/Debug/tester.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
